Fixed CookieConsent formatting on mobile

--- a/public/assets/css/CookieConsent.css
+++ b/public/assets/css/CookieConsent.css
@@ -54,7 +54,7 @@
     display: none; } }
 
 .cc_banner-wrapper {
-  height: 66px; }
+  height: 64px; }
 
 .cc_container {
   padding: 15px 15px 15px;
@@ -90,6 +90,7 @@
   background: #009640;
   color: white;
   font-size: 17px;
+  height: 64px;
   box-sizing: border-box; }
   .cc_container ::-moz-selection {
     background: #ff5e99;
@@ -117,13 +118,13 @@
 
 @-webkit-keyframes slideDown {
   0% {
-    margin-top: -66px; }
+    margin-top: -64px; }
   100% {
     margin-top: 0; } }
 
 @keyframes slideDown {
   0% {
-    margin-top: -66px; }
+    margin-top: -64px; }
   100% {
     margin-top: 0px; } }
 
@@ -131,13 +132,13 @@
   0% {
     height: 0; }
   100% {
-    height: 66px; } }
+    height: 64px; } }
 
 @keyframes growDown {
   0% {
     height: 0; }
   100% {
-    height: 66px; } }
+    height: 64px; } }
 
 .cc_container {
   -webkit-animation-duration: 0.8s;
