--- a/resources/assets/sass/modules/CookieConsent/_variables.scss
+++ b/resources/assets/sass/modules/CookieConsent/_variables.scss
@@ -9,5 +9,5 @@ $screen-sm-max: 767px;
 $screen-md-max: 991px;
 $screen-lg-max: 1199px;
 
-$plugin-height: 66px !default;
+$plugin-height: 64px !default;
 $logo: url(https://s3-eu-west-1.amazonaws.com/assets.cookieconsent.silktide.com/cookie-consent-logo.png);
