--- a/resources/assets/sass/modules/CookieConsent/light-top.scss
+++ b/resources/assets/sass/modules/CookieConsent/light-top.scss
@@ -1,4 +1,4 @@
-$plugin-height: 66px;
+$plugin-height: 64px;
 
 @import 'basic-layouts/top';
 @import 'themes/light';
