--- a/resources/assets/sass/modules/CookieConsent/themes/_light.scss
+++ b/resources/assets/sass/modules/CookieConsent/themes/_light.scss
@@ -5,6 +5,7 @@
     background: $green;
     color: white;
     font-size:17px;
+    height:64px;
     // font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
     box-sizing:border-box;
     // border:1px solid #ccc;
